--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     школы
                 </div>
                 <div class="header_main_left_btn">
-                    <button>Записаться на курс</button>
+                    <button style="cursor: pointer">Записаться на курс</button>
                 </div>
             </div>
             <div class="header_main_right">
@@ -124,7 +124,7 @@
         <!--    //////modal////////////////////////////////////////////////////-->
         <div class="modal_bck">
             <div class="modal font-modal">
-                <div class="header">
+                <div class="header_modal">
                     <div class="avatar">
                         <div class="avatar_img">
                             <img src="img/image2.jpeg" alt="">
@@ -200,95 +200,105 @@
         <!--    <div class="training">-->
         <!--    </div>-->
         <!--    **************************************************************************-->
-        <div class="swiper_container">
-            <div class="swiper">
+        <div class="swcontent">
+            <div class="swwrap" style="max-width: 1540px;">
                 <div class="training_content_title">
                     Профессиональные тренеры
                 </div>
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide">
-                        <div class="training_block_img">
-                            <img src="img/1.jpeg" alt="">
+                <div class="swiper slider-2">
+                    <div class="swiper-wrapper grid">
+                        <div class="swiper-slide">
+                            <div class="content-card">
+                                <div class="training_block_img">
+                                    <img src="img/1.jpeg" alt="">
+                                </div>
+                                <div class="training_block_text1">
+                                    Ирина Лайм
+                                </div>
+                                <div class="training_block_text2">
+                                    преподаватель по робототехнике
+                                </div>
+                                <div class="training_block_text3">
+                                    Подробнее
+                                </div>
+                            </div>
                         </div>
-                        <div class="training_block_text1">
-                            Ирина Лайм
+                        <div class="swiper-slide open__modal" style="cursor: pointer">
+                            <div class="content-card">
+                                <div class="training_block_img">
+                                    <img src="img/2.jpeg" alt="">
+                                </div>
+                                <div class="training_block_text1">
+                                    Марина Орлова
+                                </div>
+                                <div class="training_block_text2">
+                                    преподаватель по робототехнике
+                                </div>
+                                <div class="training_block_text3">
+                                    Подробнее
+                                </div>
+                            </div>
                         </div>
-                        <div class="training_block_text2">
-                            преподаватель по робототехнике
+                        <div class="swiper-slide">
+                            <div class="content-card">
+                                <div class="training_block_img">
+                                    <img src="img/3.jpeg" alt="">
+                                </div>
+                                <div class="training_block_text1">
+                                    Максим Петров
+                                </div>
+                                <div class="training_block_text2">
+                                    преподаватель по робототехнике
+                                </div>
+                                <div class="training_block_text3">
+                                    Подробнее
+                                </div>
+                            </div>
                         </div>
-                        <div class="training_block_text3">
-                            Подробнее
+                        <div class="swiper-slide">
+                            <div class="content-card">
+                                <div class="training_block_img">
+                                    <img src="img/4.jpeg" alt="">
+                                </div>
+                                <div class="training_block_text1">
+                                    Константин Назаров
+                                </div>
+                                <div class="training_block_text2">
+                                    преподаватель по робототехнике
+                                </div>
+                                <div class="training_block_text3">
+                                    Подробнее
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="content-card">
+                                <div class="training_block_img">
+                                    <img src="img/5.jpeg" alt="">
+                                </div>
+                                <div class="training_block_text1">
+                                    Лиза Весенняя
+                                </div>
+                                <div class="training_block_text2">
+                                    преподаватель по робототехнике
+                                </div>
+                                <div class="training_block_text3">
+                                    Подробнее
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="swiper-slide open__modal" style="cursor: pointer">
-                        <div class="training_block_img">
-                            <img src="img/2.jpeg" alt="">
+                    <div class="navigate">
+                        <div class="scrollbar-container">
+                            <!--          <div class="swiper-scrollbar"></div>-->
                         </div>
-                        <div class="training_block_text1">
-                            Марина Орлова
-                        </div>
-                        <div class="training_block_text2">
-                            преподаватель по робототехнике
-                        </div>
-                        <div class="training_block_text3">
-                            Подробнее
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="training_block_img">
-                            <img src="img/3.jpeg" alt="">
-                        </div>
-                        <div class="training_block_text1">
-                            Максим Петров
-                        </div>
-                        <div class="training_block_text2">
-                            преподаватель по робототехнике
-                        </div>
-                        <div class="training_block_text3">
-                            Подробнее
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="training_block_img">
-                            <img src="img/4.jpeg" alt="">
-                        </div>
-                        <div class="training_block_text1">
-                            Константин Назаров
-                        </div>
-                        <div class="training_block_text2">
-                            преподаватель по робототехнике
-                        </div>
-                        <div class="training_block_text3">
-                            Подробнее
-                        </div>
-                    </div>
-                    <div class="swiper-slide">
-                        <div class="training_block_img">
-                            <img src="img/5.jpeg" alt="">
-                        </div>
-                        <div class="training_block_text1">
-                            Лиза Весенняя
-                        </div>
-                        <div class="training_block_text2">
-                            преподаватель по робототехнике
-                        </div>
-                        <div class="training_block_text3">
-                            Подробнее
-                        </div>
-                    </div>
-                </div>
-                <div class="navigate">
-                    <div class="scrollbar-container">
-                        <div class="swiper-scrollbar"></div>
-                    </div>
-                    <!--            <div class="swiper-scrollbar"></div>-->
-                    <div class="arrows">
-                        <div class="button-prev">
-                            <img src="svg/left-arrows.svg" alt="">
-                        </div>
-                        <div class="button-next">
-                            <img src="svg/right-arrows.svg" alt="">
+                        <div class="arrows">
+                            <div class="button-prev">
+                                <img src="svg/left-arrows.svg" alt="">
+                            </div>
+                            <div class="button-next">
+                                <img src="svg/right-arrows.svg" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -373,21 +383,23 @@
 
     const swiper = new Swiper('.swiper', {
 
-        direction: 'horizontal',
-
-        slidesPerView: 3.8,
-        // centeredSlides: true,
-        spaceBetween: 40,
-
+        spaceBetween: 20,
+        slidesPerView: "auto",
+        freeMode: true,
         navigation: {
             nextEl: '.button-next',
             prevEl: '.button-prev',
         },
-
         scrollbar: {
-            el: '.swiper-scrollbar',
+            el: '.scrollbar-container',
             draggable: true
         },
+        breakpoints: {
+            770: {
+                spaceBetween: 40,
+            }
+        }
+
     });
 
 </script>
